--- a/.github/workflows/lm-evaluation-harness.yml
+++ b/.github/workflows/lm-evaluation-harness.yml
@@ -15,6 +15,7 @@ jobs:
     env:
       GPU_TYPE: "NVIDIA RTX 2000 Ada Generation"
       IMAGE_NAME: "vllm/vllm-openai:latest"
+      HF_ALLOW_CODE_EVAL: "1"
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -56,10 +57,7 @@ jobs:
           cd lm-evaluation-harness
           pip install -e .
           pip install -e ."[api]"
-          
-      - name: var
-        run: export HF_ALLOW_CODE_EVAL="1"
-        
+                  
       - name: Run LM Evaluation Harness Benchmark
         run: |
           lm_eval \
