--- a/.github/workflows/lm-evaluation-harness.yml
+++ b/.github/workflows/lm-evaluation-harness.yml
@@ -7,6 +7,10 @@ on:
         description: "Model to benchmark"
         required: true
         default: "neuralmagic/Meta-Llama-3.1-8B-Instruct-FP8"
+      dataset_task:
+        description: "Dataset task to evaluate"
+        required: true
+        default: "humaneval"
 
 jobs:
   benchmark:
@@ -16,6 +20,7 @@ jobs:
       GPU_TYPE: "NVIDIA RTX 2000 Ada Generation"
       IMAGE_NAME: "vllm/vllm-openai:latest"
       HF_ALLOW_CODE_EVAL: "1"
+      LLM_API_KEY: "${{ secrets.LLM_API_KEY }}"
     
     steps:
       - name: Checkout Repository
@@ -35,7 +40,7 @@ jobs:
             --secureCloud \
             --gpuType "$GPU_TYPE" \
             --imageName "$IMAGE_NAME" \
-            --args "--model ${{ inputs.model }} --max-model-len 4096 --port 8000 --enforce-eager --gpu-memory-utilization 0.95")
+            --args "--model ${{ inputs.model }} --max-model-len 4096 --port 8000 --enforce-eager --gpu-memory-utilization 0.95 --api-key $LLM_API_KEY")
           POD_ID=$(echo "$CREATE_OUTPUT" | awk -F'"' '/pod "/ {print $2}')
           echo "POD_ID=$POD_ID" >> $GITHUB_ENV
 
@@ -63,7 +68,7 @@ jobs:
         run: |
           lm_eval \
             --model local-completions \
-            --tasks humaneval \
+            --tasks ${{ inputs.dataset_task }} \
             --trust_remote_code \
             --confirm_run_unsafe_code \
             --limit 2 \
