--- a/.github/workflows/lm-evaluation-harness.yml
+++ b/.github/workflows/lm-evaluation-harness.yml
@@ -71,6 +71,8 @@ jobs:
             --tasks ${{ inputs.dataset_task }} \
             --trust_remote_code \
             --confirm_run_unsafe_code \
+            --log_samples \
+            --output_path /tmp \
             --limit 2 \
             --model_args model=${{ inputs.model }},base_url=http://$ENDPOINT/v1/completions,num_concurrent=1,max_retries=3,tokenized_requests=False | tee benchmark_output.log
       
@@ -79,8 +81,12 @@ jobs:
           echo "### Benchmark Results" >> $GITHUB_STEP_SUMMARY
           tail -n 10 benchmark_output.log | awk '/\| *Tasks *\|Version\|/{flag=1} flag' >> $GITHUB_STEP_SUMMARY
 
-            
-
       - name: Remove RunPod Pod
         if: always()
         run: runpodctl remove pod $POD_ID
+
+      - name: Upload Benchmark Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: benchmark-results
+          path: /tmp 
