--- a/.github/workflows/deepeval_benchmark.yml
+++ b/.github/workflows/deepeval_benchmark.yml
@@ -70,4 +70,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: benchmark-results
-          path: vllm/benchmarks/benchmark_result.json        
+          path: vllm/benchmarks/benchmark_result.json
+
+      - name: Remove RunPod Pod
+        if: always()
+        run: runpodctl remove pod $POD_ID        
