--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -69,7 +69,8 @@ jobs:
               --num-prompts 20 \
               --result-filename "benchmark_result.json" \
               --save-result \ 
-              --seed 12345 | tee benchmark_output.log
+              --seed 12345 \
+              --num-prompts 20 | tee benchmark_output.log
 
       - name: Generate Benchmark Summary
         run: |
