--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -38,7 +38,7 @@ jobs:
           echo "POD_ID=$POD_ID" >> $GITHUB_ENV
 
       - name: Wait for RunPod Instance
-        run: sleep 100
+        run: sleep 60
 
       - name: Retrieve RunPod Endpoint
         run: |
@@ -66,15 +66,13 @@ jobs:
               --base-url "http://$ENDPOINT" \
               --dataset-name=random \
               --model "${{ inputs.model }}" \
-              --num-prompts 20 \
               --result-filename "benchmark_result.json" \
-              --save-result \ 
-              --seed 12345 \
-              --num-prompts 20 | tee benchmark_output.log
+              --save-result \
+              --seed 12345 | tee benchmark_output.log
 
       - name: Generate Benchmark Summary
         run: |
-          echo "### Serving Benchmark Result" >> $GITHUB_STEP_SUMMARY
+          echo "## vLLM Benchmark Result" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           grep -A 20 "============ Serving Benchmark Result" vllm/benchmarks/benchmark_output.log >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
@@ -83,7 +81,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: benchmark-results
-          path: vllm/benchmarks/benchmark_result.json        
+          path: vllm/benchmarks/benchmark_result.json
 
       - name: Remove RunPod Pod
         if: always()
