--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -68,7 +68,8 @@ jobs:
               --model "${{ inputs.model }}" \
               --result-filename "benchmark_result.json" \
               --save-result \
-              --seed 12345 | tee benchmark_output.log
+              --seed 12345 \
+              --num-prompts 20 | tee benchmark_output.log
 
       - name: Generate Benchmark Summary
         run: |
