--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -72,8 +72,8 @@ jobs:
               --model "${{ inputs.model }}" \
               --result-filename "benchmark_result.json" \
               --save-result \
-              --seed 12345 \
-              --num-prompts ${{ inputs.num_prompts }} | tee benchmark_output.log
+              --num-prompts ${{ inputs.num_prompts }} \
+              --seed 12345 | tee benchmark_output.log
 
       - name: Generate Benchmark Summary
         run: |
