Add vLLM cloning and building step in workflow
Added steps to clone and build vLLM before installing benchmark dependencies.

--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -54,6 +54,12 @@ jobs:
         with:
           python-version: "3.12"
 
+      - name: Clone and Build vLLM
+        run: |
+          git clone https://github.com/vllm-project/vllm
+          cd vllm
+          VLLM_USE_PRECOMPILED=1 pip install --no-cache-dir --editable .
+
       - name: Install Benchmark Dependencies
         run: pip install pandas datasets pynvml
 
