--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -54,6 +54,11 @@ jobs:
         with:
           python-version: "3.12"
 
+      - name: Install uv
+        run: |
+          python -m pip install -U pip
+          python -m pip install uv    
+
       - name: Clone and Build vLLM
         run: |
           git clone https://github.com/vllm-project/vllm.git
