--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -56,14 +56,13 @@ jobs:
 
       - name: Install uv
         run: |
-          python -m pip install -U pip
-          python -m pip install uv    
+          python -m pip install uv 
 
       - name: Clone and Build vLLM
         run: |
-          git clone https://github.com/vllm-project/vllm.git
-          cd vllm
-          VLLM_USE_PRECOMPILED=1 uv pip install --editable .
+          uv venv vllm-env --python 3.12 --seed
+          source vllm-env/bin/activate
+          uv pip install vllm
 
       - name: Install Benchmark Dependencies
         run: pip install pandas datasets pynvml
