--- a/.github/workflows/lm-evaluation-harness.yml
+++ b/.github/workflows/lm-evaluation-harness.yml
@@ -66,7 +66,7 @@ jobs:
           git clone --depth 1 https://github.com/EleutherAI/lm-evaluation-harness
           cd lm-evaluation-harness
           pip install -e .
-          pip install -e ."[api]"
+          pip install "lm_eval[api]"
 
       - name: Run LM Evaluation Harness Benchmark
         run: |
