--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -11,6 +11,10 @@ on:
         description: "Model to benchmark"
         required: true
         default: "neuralmagic/Meta-Llama-3.1-8B-Instruct-FP8"
+      max_model_len:
+        description: "Max model context length (input + output tokens)"
+        required: false
+        default: "32768"  
       dataset_name:
         description: "Dataset Name"
         required: false
@@ -60,7 +64,7 @@ jobs:
             --secureCloud \
             --gpuType "${{ inputs.gpu_type }}" \
             --imageName "$IMAGE_NAME" \
-            --args "--model ${{ inputs.model }} --max-model-len 131072 --port 8000 --gpu-memory-utilization 0.95")
+            --args "--model ${{ inputs.model }} --max-model-len ${{ inputs.max_model_len }} --port 8000 --gpu-memory-utilization 0.95")
           POD_ID=$(echo "$CREATE_OUTPUT" | awk -F'"' '/pod "/ {print $2}')
           echo "POD_ID=$POD_ID" >> $GITHUB_ENV
 
