--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -45,7 +45,7 @@ jobs:
     name: Run vLLM Benchmark
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: "vllm/vllm-openai:v0.8.5"
+      IMAGE_NAME: "vllm/vllm-openai:latest"
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
