--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -65,7 +65,7 @@ jobs:
             --gpuType "${{ inputs.gpu_type }}" \
             --gpuCount 2 \
             --imageName "$IMAGE_NAME" \
-            --args "--model ${{ inputs.model }} --max-model-len ${{ inputs.max_model_len }} --port 8000 --gpu-memory-utilization 0.95")
+            --args "--model ${{ inputs.model }} --tensor-parallel-size 2 --max-model-len ${{ inputs.max_model_len }} --port 8000 --gpu-memory-utilization 0.95")
           POD_ID=$(echo "$CREATE_OUTPUT" | awk -F'"' '/pod "/ {print $2}')
           echo "POD_ID=$POD_ID" >> $GITHUB_ENV
 
