--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -10,7 +10,15 @@ on:
       gpu_number:
         description: "GPU Number"
         required: false
-        default: "1"        
+        default: "1"
+      container_disk_size:
+        description: "Container disk size (GB) - ephemeral"
+        required: false
+        default: "300"
+      volume_size:
+        description: "Persistent volume size (GB)"
+        required: false
+        default: "400"   
       model:
         description: "Model to benchmark"
         required: true
@@ -68,8 +76,11 @@ jobs:
             --secureCloud \
             --gpuType "${{ inputs.gpu_type }}" \
             --gpuCount ${{ inputs.gpu_number }} \
+            --containerDiskSize ${{ inputs.container_disk_size }} \
+            --volumeSize ${{ inputs.volume_size }} \
             --imageName "$IMAGE_NAME" \
             --args "--model ${{ inputs.model }} --tensor-parallel-size ${{ inputs.gpu_number }} --max-model-len ${{ inputs.max_model_len }} --port 8000 --gpu-memory-utilization 0.95")
+      
           POD_ID=$(echo "$CREATE_OUTPUT" | awk -F'"' '/pod "/ {print $2}')
           echo "POD_ID=$POD_ID" >> $GITHUB_ENV
 
