--- a/.github/workflows/vllm-benchmark.yml
+++ b/.github/workflows/vllm-benchmark.yml
@@ -79,7 +79,7 @@ jobs:
             --containerDiskSize ${{ inputs.container_disk_size }} \
             --volumeSize ${{ inputs.volume_size }} \
             --imageName "$IMAGE_NAME" \
-            --args "--model ${{ inputs.model }} --tensor-parallel-size ${{ inputs.gpu_number }} --max-model-len ${{ inputs.max_model_len }} --port 8000 --gpu-memory-utilization 0.95")
+            --args "--model ${{ inputs.model }} --tensor-parallel-size ${{ inputs.gpu_number }} --max-model-len ${{ inputs.max_model_len }} --enforce-eager --port 8000 --gpu-memory-utilization 0.95")
       
           POD_ID=$(echo "$CREATE_OUTPUT" | awk -F'"' '/pod "/ {print $2}')
           echo "POD_ID=$POD_ID" >> $GITHUB_ENV
